data/all_generated_tests/raw_wast_tests/br_if_TypeMismatchinControlFlowInstructions_1855.wast
;; 6. **Test Loop Backward Branch with Wrong Types**:    - **Description**: Craft a loop with a `br_if` that, upon branching, incorrectly assumes or alters input types of the loop.    - **Constraint Checked**: Ensures loop type consistency upon backward branch.    - **Relation to Type Mismatch**: Maintains type integrity for loop inputs.

(assert_invalid
  (module
    (func 
      (loop (param i32 f64) 
        (br_if 0 (i32.const 1))
      )
    )
  )
  "type mismatch"
)